--- a/common.css
+++ b/common.css
@@ -2087,6 +2087,39 @@ a:focus.a_class_white { font-family: Verdana, Arial, Helvetica, sans-serif; font
 	display: none;
 }
 
+.search-container {
+	top: 0px;
+	height: 60px;
+}
+
+.search-input {
+	background-color: #cccccc;
+	border-color: #cccccc;
+	border-style: double;
+	width: 240px;
+	font-size:16px;
+	color: #a7a7a7;
+	padding-left: 12px;
+	display:block;
+	height: 40px;
+	margin-top: -30px;
+	border-radius:2px;
+}
+
+.search-btn {
+	position: relative;
+	display: block;
+	top: -60px;
+	left: 200px;
+	height: 40px;
+	border-radius:2px;
+}
+
+.row {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 /*.submenubtn:hover .sub-dropdown-content {*/
 	/*display: block;*/
 /*}*/
