--- a/common.css
+++ b/common.css
@@ -2093,12 +2093,12 @@ a:focus.a_class_white { font-family: Verdana, Arial, Helvetica, sans-serif; font
 }
 
 .search-input {
-	background-color: #cccccc;
-	border-color: #cccccc;
+	background-color: #dedfdf;
+	border-color: #dedfdf;
 	border-style: double;
 	width: 240px;
 	font-size:16px;
-	color: #a7a7a7;
+	color: black;
 	padding-left: 12px;
 	display:block;
 	height: 40px;
