--- a/common.css
+++ b/common.css
@@ -2057,9 +2057,6 @@ a:focus.a_class_white { font-family: Verdana, Arial, Helvetica, sans-serif; font
    background-position: left -20px; 
 }
 
-
-
-
 .dropbtn {
 	background-color: #3166b6;
 	color: white;
@@ -2163,10 +2160,31 @@ a:focus.a_class_white { font-family: Verdana, Arial, Helvetica, sans-serif; font
 	right: 20px;
 }
 
+.vav-btn {
+	background-color: #006666;
+	color: white;
+	padding-top: 16px;
+	font-weight: lighter;
+	padding-bottom: 16px;
+	width: 240px;
+	font-family: "Arial", Verdana sans-serif; font-size: 17px; line-height: 20px; font-weight: lighter; letter-spacing: +0.05ex; text-decoration: none; color: #FFFFFF;
+	border: none;
+	cursor: pointer;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
 @media only screen and (max-width: 992px) {
 	.dropbtn {
 		width: 180px;
 		font-size: 13px;
+	}
+
+	.vav-btn {
+		width: 180px;
+		font-size: 13px;
+		margin-top: 4px;
 	}
 
 	.dropdown-content {
@@ -2176,6 +2194,10 @@ a:focus.a_class_white { font-family: Verdana, Arial, Helvetica, sans-serif; font
 	.search-container {
 		margin-left: 130px;
 	}
+
+	.btn-info-small {
+		font-size: 14px;
+	}
 }
 
 @media only screen and (max-width : 767px) {
@@ -2184,6 +2206,12 @@ a:focus.a_class_white { font-family: Verdana, Arial, Helvetica, sans-serif; font
 	}
 
 	.dropbtn {
+		width: 350px;
+		font-size: 18px;
+		margin-top: 4px;
+	}
+
+	.vav-btn {
 		width: 350px;
 		font-size: 18px;
 	}
